2002-02-08  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m.el (w3m-pixel-per-line): New user option.
	(w3m-rendering-half-dump): Use `w3m-pixel-per-line' as the -ppl
	argument of the w3m command.

2002-02-07  Yuuichi Teranishi  <teranisi@gohome.org>

	* w3m-e21.el (w3m-favicon-size): Set default value to nil.
	(w3m-buffer-favicon): If w3m-favicon-size is nil, detect frame char
	height and use it.

	* w3m.el (w3m-command): Set default value to nil.
	(w3m-type): Ditto.
	(w3m-options): New user option.
	(toplevel): Set w3m-command, w3m-type and w3m-options.
	(w3m-treat-image-size): New user option.
	(w3m-rendering-half-dump): Set rendering options -o display_image=on/off, -ppc, -ppl
	according to the value of `w3m-treat-image-size'.

2002-02-07  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-util.el (w3m-display-message): New macro.

	* w3m.el (w3m-make-help-echo): Clear the echo area when Emacs 21
	is running; use the modern styles of backquote.
	(w3m-make-balloon-help): Use the modern styles of backquote.
	(w3m-toggle-inline-image): Use `w3m-display-message' instead of
	`message' to say a trivial message.
	(w3m-view-this-url): Ditto.
	(w3m-submit-form): Ditto.
	(w3m-view-image): Ditto.
	(w3m-save-image): Ditto.
	(w3m-download-this-url): Ditto.
	(w3m-print-current-url): Ditto.
	(w3m-print-this-url): Ditto.
	(w3m-edit-this-url): Ditto.
	(w3m-quit): Ditto.
	(w3m-goto-ftp-url): Ditto.
	(w3m-select-buffer): Ditto.
	(w3m-select-buffer-show-this-line): Ditto.
	(w3m-select-buffer-show-this-line-and-switch): Ditto.

2002-02-07  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* w3m.el (w3m-after-cursor-move-hook): New option.
	(w3m-check-current-position): New function.
	(w3m-print-this-url-after-command): Removed.
	(w3m-buffer-setup): Set `w3m-check-current-position' to
	`post-command-hook', instead of `w3m-print-this-url-after-command'.
	(w3m-add-local-hook): Check version of Emacsen dynamically.

	* w3m-e21.el (w3m-add-local-hook): New function.
