@@ -252,13 +252,21 @@ width using expression (+ (window-width) VALUE)."
 
 (defcustom w3m-treat-image-size (and (member "image" w3m-options) t)
   "*Non-nil means to let the w3m HTML rendering be conscious of image size.
-`w3m-pixel-per-line' is used for the `-ppl' argument of the w3m command.
-`-ppc' argument of the w3m command is set as the width of default face font."
+`w3m-pixel-per-character' is used for the `-ppc' argument of the w3m command.
+`w3m-pixel-per-line' is used for the `-ppl' argument of the w3m command."
   :group 'w3m
   :type 'boolean)
 
 (defcustom w3m-pixel-per-line 64
   "*This value is used for the `-ppl' argument of the w3m command.
+If nil, the height of the default face font is used.
+It is valid only when `w3m-treat-image-size' is non-nil."
+  :group 'w3m
+  :type 'boolean)
+
+(defcustom w3m-pixel-per-character nil
+  "*This value is used for the `-ppc' argument of the w3m command.
+If nil, the width of the default face font is used.
 It is valid only when `w3m-treat-image-size' is non-nil."
   :group 'w3m
   :type 'boolean)
@@ -3161,15 +3169,22 @@ type as a string argument, when retrieve is complete."
 			      (append
 			       (list "-o" "display_image=on")
 			       (when (w3m-display-graphic-p)
-				 (list "-ppl" 
-				       (number-to-string w3m-pixel-per-line)
+				 (list "-ppl"
+				       (number-to-string 
+					(or w3m-pixel-per-line
+					    (w3m-static-if
+						(featurep 'xemacs)
+						(font-height
+						 (face-font 'default))
+					      (frame-char-height))))
 				       "-ppc" 
 				       (number-to-string
-					(w3m-static-if
-					    (featurep 'xemacs)
-					    (font-width
-					     (face-font 'default))
-					  (frame-char-width))))))
+					(or w3m-pixel-per-character
+					    (w3m-static-if
+						(featurep 'xemacs)
+						(font-width
+						 (face-font 'default))
+					      (frame-char-width)))))))
 			    (list "-o" "display_image=off")))))))))
 
 (defun w3m-rendering-buffer-1 (&optional content-charset binary-buffer)
