@@ -3,6 +3,9 @@
 	* w3m.el (w3m-pixel-per-line): New user option.
 	(w3m-rendering-half-dump): Use `w3m-pixel-per-line' as the -ppl
 	argument of the w3m command.
+	(w3m-pixel-per-character): New user option.
+	(w3m-rendering-half-dump): Use `w3m-pixel-per-character' as the -ppc
+	argument of the w3m command.
 
 2002-02-07  Yuuichi Teranishi  <teranisi@gohome.org>
 
